# SGDB_Agent

./: .gitignore  DEPLOY_CHANGES_NJU.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_REPORT.md  PROJECT_STATUS.md  README.md  SMALL_SOURCES.md
agent_analysis/: 01_AGENT_PURPOSE_AND_BOUNDARIES.md  02_RESOURCES_AND_REFERENCES.md  03_ARCHITECTURE_IMPROVEMENT_ROADMAP.md
review/: 00_INDEX.md  (+10 more)
scgb_deploy/backend/: .env  pyproject.toml  run_server.py
scgb_deploy/backend/api/: deps.py  main.py  schemas.py  websocket.py
scgb_deploy/backend/api/routes/: advanced_search.py  dataset.py  downloads.py  entity.py  explore.py  explore_optimized.py  explore_original.py  export.py  ontology.py  query.py  session.py  stats.py
scgb_deploy/backend/api/services/: download_resolver.py
scgb_deploy/backend/src/: config.py
scgb_deploy/backend/src/agent/: coordinator.py
scgb_deploy/backend/src/core/: __init__.py  exceptions.py  interfaces.py  models.py
scgb_deploy/backend/src/dal/: database.py
scgb_deploy/backend/src/fusion/: engine.py
scgb_deploy/backend/src/infra/: cost_controller.py  llm_client.py  llm_router.py
scgb_deploy/backend/src/knowledge/: __init__.py  build_schema.py  prompts.py  schema_knowledge.py
scgb_deploy/backend/src/memory/: cache.py  episodic.py  semantic.py  working.py
scgb_deploy/backend/src/ontology/: cache.py  parser.py  resolver.py
scgb_deploy/backend/src/sdk/: __init__.py  client.py
scgb_deploy/backend/src/sql/: engine.py
scgb_deploy/backend/src/synthesis/: __init__.py  answer.py
scgb_deploy/backend/src/understanding/: llm_parser.py  parser.py
(+86 files in other folders)
